:white_check_mark: Test: 코드 추가에 대한 테스트 보강